infra/k8s/gateway-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: asolerp/gateway
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-srv
spec:
  selector:
    app: gateway
  ports:
    - name: gateway
      protocol: TCP
      port: 4000
      targetPort: 4000
