infra/k8s/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/websocket-services: gateway-srv
    nginx.org/websocket-services: gateway-srv
spec:
  rules:
    - host: graphql.dev
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: gateway-srv
              servicePort: 4000
